# dcrawCpp

./: .gitignore  CMakeLists.txt  README.md
share/sampleImages/: sources.md
share/sampleImages/Kodak/C330/: format_none_yrgb.raw.bz2
src/: dcrawMain.cpp  imageProcess.cpp  imageProcess.h  thumbnailExport.cpp  thumbnailExport.h
src/colorRepresentation/: ColorRgb.cpp  ColorRgb.h  PixelRgb16Bits.cpp  PixelRgb16Bits.h  adobeCoeff.cpp  adobeCoeff.h  cielab.cpp  cielab.h  colorFilters.cpp  colorFilters.h  colorSpaceMatrices.cpp  colorSpaceMatrices.h  iccProfile.cpp  iccProfile.h  whiteBalance.cpp  whiteBalance.h
src/common/: CameraImageInformation.cpp  CameraImageInformation.h  Options.cpp  Options.h  clearGlobalData.cpp  clearGlobalData.h  globals.cpp  globals.h  mathMacros.cpp  mathMacros.h  options.cpp  options.h  util.cpp  util.h
src/imageHandling/: BayessianImage.cpp  BayessianImage.h  rawAnalysis.cpp  rawAnalysis.h
src/interpolation/: AhdInterpolator.cpp  AhdInterpolator.h  BiLinearInterpolator.cpp  BiLinearInterpolator.h  Interpolator.cpp  Interpolator.h  PpgInterpolator.cpp  PpgInterpolator.h  VgnInterpolator.cpp  VgnInterpolator.h
src/persistence/readers/: globalsio.cpp  globalsio.h  sonyRawLoaders.cpp  tiffinternal.cpp  tiffinternal.h  tiffjpeg.cpp  tiffjpeg.h  tiffparser.cpp  tiffparser.h  timestamp.cpp  timestamp.h
src/persistence/readers/rawloaders/: canonRawLoaders.cpp  canonRawLoaders.h  dngRawLoaders.cpp  dngRawLoaders.h  hasselbladRawLoaders.cpp  hasselbladRawLoaders.h  imaconRawLoaders.cpp  imaconRawLoaders.h  jpegRawLoaders.cpp  jpegRawLoaders.h  kodakRawLoaders.cpp  kodakRawLoaders.h  leafRawLoaders.cpp  leafRawLoaders.h  nikonRawLoaders.cpp  nikonRawLoaders.h  nokiaRawLoaders.cpp  nokiaRawLoaders.h  olympusRawLoaders.cpp  olympusRawLoaders.h  panasonicRawLoaders.cpp  panasonicRawLoaders.h  pentaxRawLoaders.cpp  pentaxRawLoaders.h  phaseoneRawLoaders.cpp  phaseoneRawLoaders.h  rolleiRawLoaders.cpp  rolleiRawLoaders.h  samsungRawLoaders.cpp  samsungRawLoaders.h  sinarRawLoaders.cpp  sinarRawLoaders.h  sonyRawLoaders.cpp  sonyRawLoaders.h  standardRawLoaders.cpp  standardRawLoaders.h
src/persistence/writers/: jpeg.cpp  jpeg.h  ppm.cpp  ppm.h
src/postprocessors/: gamma.cpp  gamma.h  histogram.cpp  histogram.h
